--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MainFrame.form
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MainFrame.form
@@ -6,6 +6,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -29,38 +30,41 @@
                   <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
-                              <Component id="jLabelCheckPathToTimeNet" pref="256" max="32767" attributes="0"/>
+                              <Component id="jLabelCheckPathToTimeNet" max="32767" attributes="0"/>
                               <EmptySpace min="-2" pref="182" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="jTextFieldPathToTimeNet" alignment="0" pref="438" max="32767" attributes="0"/>
-                          <Component id="jTextFieldSCPNFile" alignment="0" pref="438" max="32767" attributes="0"/>
-                          <Component id="jScrollPane1" alignment="0" pref="438" max="32767" attributes="0"/>
+                          <Component id="jTextFieldPathToTimeNet" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jTextFieldSCPNFile" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jScrollPane1" alignment="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="jLabelSimulationCount" pref="286" max="32767" attributes="0"/>
-                          <Component id="jTabbedPane1" alignment="0" pref="286" max="32767" attributes="0"/>
-                          <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="jButtonOpenSCPN" min="-2" pref="126" max="-2" attributes="1"/>
-                                  <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
-                                  <Component id="jButtonReload" min="-2" max="-2" attributes="1"/>
+                          <Component id="jLabelSimulationCount" max="32767" attributes="0"/>
+                          <Component id="jTabbedPane1" alignment="0" max="32767" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="jButtonOpenSCPN" min="-2" pref="126" max="-2" attributes="1"/>
+                                      <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
+                                      <Component id="jButtonReload" min="-2" max="-2" attributes="1"/>
+                                  </Group>
+                                  <Component id="jSeparator2" alignment="0" max="32767" attributes="1"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="jButtonExport" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Component id="jButtonGenerateListOfExperiments" alignment="0" max="32767" attributes="1"/>
+                                  <Component id="jButtonStartBatchSimulation" alignment="0" max="32767" attributes="1"/>
+                                  <Component id="jSeparator3" alignment="0" max="32767" attributes="1"/>
+                                  <Component id="jButtonLoadSampleLogFile" alignment="0" max="32767" attributes="1"/>
+                                  <Group type="102" alignment="0" attributes="1">
+                                      <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
+                                      <Component id="jLabelExportStatus" max="32767" attributes="0"/>
+                                  </Group>
+                                  <Component id="jButtonStartOptimization" alignment="0" max="32767" attributes="1"/>
                               </Group>
-                              <Component id="jSeparator2" alignment="0" max="32767" attributes="1"/>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="jButtonExport" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Component id="jButtonGenerateListOfExperiments" alignment="0" max="32767" attributes="1"/>
-                              <Component id="jButtonStartBatchSimulation" alignment="0" max="32767" attributes="1"/>
-                              <Component id="jSeparator3" alignment="0" max="32767" attributes="1"/>
-                              <Component id="jButtonLoadSampleLogFile" alignment="0" max="32767" attributes="1"/>
-                              <Group type="102" alignment="0" attributes="1">
-                                  <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
-                                  <Component id="jLabelExportStatus" max="32767" attributes="0"/>
-                              </Group>
-                              <Component id="jButtonStartOptimization" alignment="0" max="32767" attributes="1"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -102,12 +106,12 @@
                       <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
                       <Component id="jButtonStartOptimization" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jScrollPane1" alignment="1" pref="410" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="1" pref="399" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="jLabelExportStatus" min="-2" pref="18" max="-2" attributes="0"/>
                   <Component id="jTextFieldPathToTimeNet" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabelExportStatus" alignment="1" min="-2" pref="18" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
