--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MeasurementForm.form
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MeasurementForm.form
@@ -43,7 +43,7 @@
               </Group>
           </Group>
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="25" max="32767" attributes="0"/>
               <Component id="jCheckBoxEnableOptimizationForThisMeasurement" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
