--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MainFrame.form
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MainFrame.form
@@ -23,6 +23,7 @@
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -45,16 +46,16 @@
                   <Component id="jSeparator1" alignment="0" min="-2" pref="752" max="-2" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="jTextFieldSCPNFile" alignment="0" pref="317" max="32767" attributes="0"/>
+                          <Component id="jTextFieldSCPNFile" alignment="0" max="32767" attributes="0"/>
                           <Component id="jScrollPane1" alignment="0" pref="0" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jButtonPathToTimeNet" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="0" pref="136" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabelSimulationCount" alignment="1" pref="407" max="32767" attributes="0"/>
+                          <Component id="jLabelSimulationCount" alignment="1" max="32767" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="1" attributes="0">
                                   <Component id="jCheckBox1" alignment="1" min="-2" pref="265" max="-2" attributes="0"/>
@@ -79,7 +80,7 @@
                                       <Component id="jButtonLoadCacheFile" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace min="0" pref="136" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
