--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MainFrame.form
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MainFrame.form
@@ -56,29 +56,37 @@
                       <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabelSimulationCount" alignment="1" max="32767" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="jCheckBoxCachedSimulation" alignment="1" min="-2" pref="265" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                      <Component id="jTabbedPane1" alignment="0" max="32767" attributes="0"/>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="jButtonOpenSCPN" min="-2" pref="126" max="-2" attributes="1"/>
-                                          <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
-                                          <Component id="jButtonReload" min="-2" max="-2" attributes="1"/>
-                                      </Group>
-                                      <Component id="jSeparator2" alignment="0" max="32767" attributes="1"/>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="jButtonExport" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                                          <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-                                      </Group>
-                                      <Component id="jButtonGenerateListOfExperiments" alignment="0" max="32767" attributes="1"/>
-                                      <Component id="jButtonStartBatchSimulation" alignment="0" max="32767" attributes="1"/>
-                                      <Component id="jSeparator3" alignment="0" max="32767" attributes="1"/>
-                                      <Component id="jButtonStartOptimization" alignment="0" max="32767" attributes="1"/>
-                                      <Component id="jLabelExportStatus" max="32767" attributes="0"/>
-                                      <Component id="jButtonLoadCacheFile" max="32767" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="jTabbedPane1" alignment="0" max="32767" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="jButtonOpenSCPN" min="-2" pref="126" max="-2" attributes="1"/>
+                                      <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
+                                      <Component id="jButtonReload" min="-2" max="-2" attributes="1"/>
                                   </Group>
+                                  <Component id="jSeparator2" alignment="0" max="32767" attributes="1"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="jButtonExport" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Component id="jButtonGenerateListOfExperiments" alignment="0" max="32767" attributes="1"/>
+                                  <Component id="jButtonStartBatchSimulation" alignment="0" max="32767" attributes="1"/>
+                                  <Component id="jSeparator3" alignment="0" max="32767" attributes="1"/>
+                                  <Group type="102" alignment="1" attributes="0">
+                                      <Component id="jLabelExportStatus" max="32767" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="jCheckBoxCachedSimulation" min="-2" pref="265" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Component id="jButtonLoadCacheFile" alignment="1" max="32767" attributes="0"/>
+                                  <Group type="102" alignment="1" attributes="0">
+                                      <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                                      <Component id="jComboBoxSimulationType" min="-2" pref="123" max="-2" attributes="0"/>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Component id="jComboBoxOptimizationType" min="-2" pref="130" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Component id="jButtonStartOptimization" alignment="0" max="32767" attributes="1"/>
                               </Group>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
@@ -124,15 +132,21 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButtonLoadCacheFile" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="jCheckBoxCachedSimulation" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jComboBoxSimulationType" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jComboBoxOptimizationType" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jButtonStartOptimization" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="19" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="15" max="32767" attributes="0"/>
                   </Group>
               </Group>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="jButtonPathToTimeNet" max="32767" attributes="0"/>
-                  <Component id="jLabelExportStatus" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="jButtonPathToTimeNet" max="32767" attributes="0"/>
+                      <Component id="jLabelExportStatus" max="32767" attributes="0"/>
+                  </Group>
+                  <Component id="jCheckBoxCachedSimulation" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabelSimulationCount" min="-2" pref="24" max="-2" attributes="0"/>
@@ -305,6 +319,33 @@
       </Properties>
       <Events>
         <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="jCheckBoxCachedSimulationStateChanged"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="jComboBoxSimulationType">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="3">
+            <StringItem index="0" value="Local Sim."/>
+            <StringItem index="1" value="Cached Sim."/>
+            <StringItem index="2" value="Distributed S."/>
+          </StringArray>
+        </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="jComboBoxOptimizationType">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="5">
+            <StringItem index="0" value="Greedy"/>
+            <StringItem index="1" value="Sim. Annealing"/>
+            <StringItem index="2" value="A. Seidel 0"/>
+            <StringItem index="3" value="A. Seidel 1"/>
+            <StringItem index="4" value="A. Seidel 2"/>
+          </StringArray>
+        </Property>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBoxOptimizationTypeActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
