--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MainFrame.form
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/MainFrame.form
@@ -319,10 +319,8 @@
     <Component class="javax.swing.JComboBox" name="jComboBoxSimulationType">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="3">
-            <StringItem index="0" value="Local Sim."/>
-            <StringItem index="1" value="Cached Sim."/>
-            <StringItem index="2" value="Distributed S."/>
+          <StringArray count="1">
+            <StringItem index="0" value="Sim"/>
           </StringArray>
         </Property>
       </Properties>
